--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -75,7 +75,8 @@ body {
     align-items: center;
     text-align: center;
     font-weight: bold;
-    padding-bottom: 1rem; }
+    padding-bottom: 1rem;
+    min-width: 5rem; }
 
 .timer__count {
   display: flex;
