--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -29,6 +29,7 @@ body {
   body::after {
     content: '';
     background: url("https://play-guitars.com/wp-content/uploads/2019/06/which-is-the-easiest-guitar-to-learn-for-beginners.jpg") no-repeat center center/cover;
+    background-repeat: repeat-y;
     opacity: 0.2;
     top: 0;
     left: 0;
@@ -36,9 +37,7 @@ body {
     right: 0;
     position: absolute;
     z-index: -1;
-    min-height: 15rem;
-    box-shadow: 0 7px 2px rgba(0, 0, 0, 0.3);
-    height: 100%; }
+    min-height: 100%; }
   @media (max-width: 600px) {
     body {
       max-width: 90%; } }
@@ -46,7 +45,9 @@ body {
     max-width: 100%; }
 
 .heading__header {
-  text-align: center; }
+  text-align: center;
+  padding: 1rem 0;
+  margin-top: 1rem; }
 
 .form {
   display: flex;
