--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@ body {
   &::after {
     content: '';
     background: url('https://play-guitars.com/wp-content/uploads/2019/06/which-is-the-easiest-guitar-to-learn-for-beginners.jpg') no-repeat center center/cover;
+    background-repeat: repeat-y;
     opacity: 0.2;
     top: 0;
     left: 0;
@@ -23,9 +24,7 @@ body {
     right: 0;
     position: absolute;
     z-index: -1;
-    min-height: 15rem;
-    box-shadow: 0 7px 2px rgba(0, 0, 0, 0.3);
-    height: 100%;
+    min-height: 100%;
   }
 
   @media (max-width: 600px) {
@@ -40,6 +39,8 @@ body {
 .heading {
   &__header {
     text-align: center;
+    padding: 1rem 0;
+    margin-top: 1rem;
   }
 }
 
